Minor styling alignment and padding fixes

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -72,7 +72,6 @@ a {
 
 p {
   margin: .75em 0;
-  line-height: 1.125;
 }
 
 * {
@@ -93,7 +92,7 @@ body {
 
 header {
   background-color: $blue-light;
-  padding-bottom: 1em;
+  padding-bottom: 2em;
   border-bottom: .25em solid $white;
   color: $black;
   line-height: 1.25;
@@ -105,7 +104,7 @@ header {
     }
   }
   @media screen and (min-width: 1024px) {
-    padding: 0 0 1em;
+    padding: 0 0 2em;
     > .container > .grid {
       max-width: 100%;
     }
@@ -377,7 +376,7 @@ div.button {
 
 ul {
   list-style: disc;
-  line-height: 1.125;
+  text-align: left;
   li {
     margin-left: 1.5em;
   }
@@ -445,11 +444,10 @@ ul {
     }
     .price {
       // background-color: #005cd2;
-      line-height: 1.5;
       // border-radius: 1em;
       padding: 1em;
       h2 {
-        padding: 0;
+        padding: .25em 0;
       }
     }
     .banner {
